tests/errors/static_lambda.php
<?php

declare(strict_types=1);

$lambda = function () {
};
